@@ -49,6 +49,9 @@ Version 1.11.0-svn:
  * Multiplayer:
    * Fix an accidental terrain type change in Isar's Cross.
    * Fix attacker side being human in 6p_Team_Survival.
+   * Canceling the sides setup screen when hosting a MP game now brings the
+     host back to the game configuration screen first instead of returning
+     immediately to the lobby or (for hotseat) titlescreen (bug #7130).
 
  * Terrain:
    * New tropical frost images.
