@@ -70,6 +70,9 @@ Version 1.11.0-svn:
    * Fix an accidental terrain type change in Isar's Cross
    * Fix attacker side being human in 6p_Team_Survival (bug #19400)
    * Ignore Pango markup in map descriptions (bug #19210)
+   * Canceling the sides setup screen when hosting a MP game now brings the
+     host back to the game configuration screen first instead of returning
+     immediately to the lobby or (for hotseat) titlescreen (bug #7130)
  * Music and sound effects:
    * Replaced some of the wolf hit sounds with lower-pitched ones
  * Terrain:
